realTime: get events results
