# model/event.go
@@ -1,28 +1,50 @@
 package model
 
 import (
+	"TrackMaster/pkg"
 	"gorm.io/gorm"
 	"time"
 )
 
 type Event struct {
-	StoryID     string    `gorm:"index;not null" json:"storyID" binding:"required,max=32"`
-	ID          string    `gorm:"primaryKey" json:"id" binding:"required,max=32"`
-	Name        string    `gorm:"not null" json:"name" binding:"required,min=2,max=50"`
-	Description string    `json:"description"`
-	OnTrail     bool      `gorm:"default:false" json:"onTrail"` //这个字段暂时用不上
-	CreatedAt   time.Time `gorm:"autoCreateTime" json:"createdAt"`
-	UpdatedAt   time.Time `gorm:"autoUpdateTime" json:"updatedAt"`
-	Fields      []Field   `gorm:"foreignKey:EventID"`
+	StoryID     string        `gorm:"index;not null" json:"storyID" binding:"required,max=32"`
+	ID          string        `gorm:"primaryKey" json:"id" binding:"required,max=32"`
+	Name        string        `gorm:"not null" json:"name" binding:"required,min=2,max=50"`
+	Description string        `json:"description"`
+	OnTrail     bool          `gorm:"default:false" json:"onTrail"` //这个字段暂时用不上
+	CreatedAt   time.Time     `gorm:"autoCreateTime" json:"createdAt"`
+	UpdatedAt   time.Time     `gorm:"autoUpdateTime" json:"updatedAt"`
+	Fields      []Field       `gorm:"foreignKey:EventID"`
+	Results     []EventResult `gorm:"foreignKey:EventID"`
+
+	RecordIDs []string  `gorm:"-"` // 不要在数据库中保存这个字段
+	Records   []*Record `gorm:"many2many:record_events;"`
 }
 
-func (e *Event) List(db *gorm.DB, eventLogIDs []string) ([]Event, int64, error) {
+type SwaggerEvents struct {
+	Data  []*Event
+	Pager *pkg.Pager
+}
+
+func (e *Event) List(db *gorm.DB, eventIDs []string) ([]Event, int64, error) {
 	var events []Event
-	result := db.Model(Event{}).Preload("Fields").Where("id in (?)", eventLogIDs).Find(&events)
+	result := db.Model(Event{}).Preload("Fields").Where("id in (?)", eventIDs).Find(&events)
 
 	if result.Error != nil {
 		return nil, 0, result.Error
 	}
+
+	totalRow := result.RowsAffected
+	return events, totalRow, nil
+}
+
+func (e *Event) ListWithNewestResult(db *gorm.DB, eventIDs []string, recordID string) ([]Event, int64, error) {
+	var events []Event
+	result := db.Model(e).Preload("Fields.Results", func(db *gorm.DB) *gorm.DB {
+		return db.Where("record_id = ?", recordID).Order("created_at desc")
+	}).Preload("Results", func(db *gorm.DB) *gorm.DB {
+		return db.Where("record_id = ?", recordID).Order("created_at desc")
+	}).Where("id in (?)", eventIDs).Find(&events)
 
 	totalRow := result.RowsAffected
 	return events, totalRow, nil
@@ -49,4 +71,12 @@ func (es Events) FindByID(id string) (Event, bool) {
 		}
 	}
 	return Event{}, false
+}
+
+func (es Events) ListEventID() ([]string, error) {
+	eventIDs := make([]string, 0, len(es))
+	for i := range es {
+		eventIDs = append(eventIDs, es[i].ID)
+	}
+	return eventIDs, nil
 }
